--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 
 <html lang="en">
 <head>
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107397765-1"></script>
+	<script>
+ 		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments)};
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-107397765-1');
+	</script>
+
 	<meta charset="utf-8">
-	<title>Homepage</title>
-	<meta name="description" content="Daniel's Portfolio">
-	<meta name="author" content="Daniel">
+	<title>PUBG Random Spawn</title>
+	<meta name="description" content="Having trouble choosing where to drop? This website will randomly select a location on the map for you!">
+	<meta name="author" content="Betathedata">
 	<!--CSS Stylesheet-->
 	<link rel="stylesheet" href="css/css.css?v=1.0">
 	
