--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 			
 		</div>
 	</div>
+	
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<script src="js/rand.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	
 	<script>
 	</script>
