--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<strong><p>RANDOM PLACE</p></strong>
 			</div>
 			<div onclick="RandomCity()" class="button">
-				<strong><p>RANDOM CITY</p></strong>
+				<strong><p>RANDOM LANDMARK</p></strong>
+			</div>
+			<div onclick="RandomQuadrant()" class="button">
+				<strong><p>RANDOM QUADRANT</p></strong>
 			</div>
 		</div>
 		
@@ -58,6 +61,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="rightcol" id="box">
 			<div id="RandomCityBox">
 				<a class="TownName RandomCityBox" href=""><h1 class="RandomCityBox button">YOU SHOULD DROP AT <span class="RandomCityBox" id="TownNameSpan">Pochinki</span></a></h1>
+			</div>
+			<div id="RandomQuadBox">
+				<a class="TownName RandomQuadBox" href=""><h1 class="RandomQuadBox button">YOU SHOULD DROP AT <span class="RandomQuadBoxBox" id="QuadNameSpan">AI</span></a></h1>
 			</div>
 			<div id="container">
 				<img class="image" src="images/map.jpg"/>				
