--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div onclick="RandomQuadrant()" class="button">
 				<strong><p>RANDOM QUADRANT</p></strong>
 			</div>
+			
+			<div class="buttonalt">
+				<strong><h1>FUN RULES:</h1></strong>
+				<strong><p>These are some rules that me and my friends stick to, you don't have to follow them, but it makes the game way more challenging.</p></strong>
+				<ul>
+					<li><strong>Drop exactly where it tells you, even if its in the middle of nowhere.</strong></li>
+					<li><strong>Can't get there by parachute? Find a car, don't pick up loot until you reach your destination.</strong></li>
+			</div>
 		</div>
 		
 					
