--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<!--CSS Stylesheet-->
 	<link rel="stylesheet" href="css/css.css?v=1.0">
 	
-	<!-- Ubuntu Font from Google Fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/home.css?v=1.0">
+	
+ 
 	
 	<!--Favicon-->
 	<link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32" />
@@ -25,7 +28,7 @@
 	<div class="wrapper">
 		<div class="topbar colr col-12 offset-12">
 				<div class="title col-5">
-					<h2>DANIEL MCCLUSKEY</h2>	
+					<h4>DANIEL MCCLUSKEY</h4>	
 				</div>
 				<div class="navbar col-5">
 					<ul>
@@ -39,15 +42,15 @@
 		
 		<div class="imagecar colr col-12">
 			<div>
-				<h1>&lt;Coder&gt;</h1>
+				<h2>&lt;Coder&gt;</h2>
 				<p>Experience in Multiple programming languages including, but not limited to Python, HTML, CSS, C++.</p>
 			</div>
 			<div>
-				<h1>Competitive Gamer</h1>
+				<h2>Competitive Gamer</h2>
 				<p>Addicted to the competitive side of gaming, playing against other online players in games such as CSGO, Insurgency and Left 4 Dead.</p>
 			</div>
 			<div>
-				<h1>Video editing Hobbyist</h1>
+				<h2>Video editing Hobbyist</h2>
 				<p>Avid interest in video editing, mainly of footage collected during Gameplay using programs such as Sony Vegas Pro and Adobe After Effects.</p>
 			</div>
 			
@@ -63,7 +66,7 @@
 				<div class="testbox-a">
 					<div class="abs">
 						<img src="images/office.png"/>
-						<h1>About Me</h1>
+						<h3>About Me</h3>
 						
 						<p>I'm Daniel McCluskey, a Computer Games Programmer currently studying at the University of Gloucestershire. When I'm not coding, you'll typically find me playing games. </p>
 						<a href="about.html"><span></span></a>
@@ -74,7 +77,7 @@
 				<div class="testbox-a">
 					<div class="abs">
 						<img src="images/office.png"/>
-						<h1>What can I do?</h1>
+						<h3>What can I do?</h3>
 						<p>I am a quick learner so any task you set me on, I will get on pretty quickly, but if you mean my current skills I can code in multiple languages, I can edit video footage and I can pat my head and rub my tummy at the same time. </p>
 						<a href="projects.html"><span></span></a>
 					</div>
@@ -83,7 +86,7 @@
 				<div class="testbox-a">
 					<div class="abs">
 						<img src="images/office.png"/>
-						<h1>Contact me</h1>
+						<h3>Contact me</h3>
 						<p>If for any reason you would like to contact me, you can use my email or my Twitter page. </p>
 						<a href="contact.html"><span></span></a>
 					</div>
