--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 			</div>
 			<div>
 				<h2>Competitive Gamer</h2>
-				<p>Addicted to the competitive side of gaming, playing against other online players in games such as CSGO, Insurgency and Left 4 Dead.</p>
+				<p>Addicted to the competitive side of gaming, playing against other online players in games such as CSGO.</p>
 			</div>
 			<div>
-				<h2>Video editing Hobbyist</h2>
-				<p>Avid interest in video editing, mainly of footage collected during Gameplay using programs such as Sony Vegas Pro and Adobe After Effects.</p>
+				<h2>Video editor</h2>
+				<p>Avid interest in video editing, using programs such as Sony Vegas Pro and Adobe After Effects.</p>
 			</div>
 			
 		</div>
