--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<img src="images/office.png"/>
 						<h3>About Me</h3>
 						
-						<p>I'm Daniel McCluskey, a Computer Games Programmer currently studying at the University of Gloucestershire. When I'm not coding, you'll typically find me playing games. </p>
+						<p>I'm Daniel McCluskey, a Computer Games Programmer currently studying at the University of Gloucestershire, and as you can probably tell, I like blue. </p>
 						<a href="about.html"><span></span></a>
 					</div>
 					
