--- a/about.html
+++ b/about.html
@@ -163,6 +163,16 @@
 				</div>
 				
 			</div>
+
+			<div class="row" style="background-color:#ffffff">
+				<div class="ten columns offset-by-one" style="padding:20px">
+					<h3 class="value-heading">Resume/CV</h3>
+					<hr></hr>
+				<a href="resources/DM.pdf">Download</a>
+				<embed src="resources/DM.pdf" width="500" height="375" type='application/pdf'>
+				</div>
+				
+			</div>
 			<div class="row" style="background-color:#ffffff">
 				<div class="ten columns offset-by-one" style="padding:20px">
 					<h3 class="value-heading">What have I done?</h3>
