--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
 					<hr></hr>
 					<p class="value-description">Tiny Tanks is a 2D game made using a custom Framework and a Self written math library. The math library is used to define Vector and Matrix classes used to rotates and move sprites within the game. The game is a singleplayer game with a basic enemy AI which moves around and shoots at you. The source code can be found <a href="https://github.com/danielmccluskey/Tiny-Tanks/">here</a> or if you simply wish to play the game, you can download it here.</p>
 					<div class="videoWrapper">				
-						<iframe  width="560" height="315" src="https://www.youtube-nocookie.com/embed/fB_QqEZIQn4?rel=0&amp;showinfo=0?ecver=1" frameborder="0" gesture="media" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/fB_QqEZIQn4?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 				
