Added Navmesh Tutorial to projects.html

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,17 @@
                     </div>
 
                 </div>
+				<div class="row" style="background-color:#ffffff">
+                    <div class="ten columns offset-by-one" style="padding:20px">
+                        <h3 class="value-heading">Unity - Setting up a Navmesh</h3>
+                        <hr></hr>
+                        <p class="value-description">As a small side project, I made a very short tutorial on how to set up a Nav mesh in Unity. You can find the example project I created for this <a href="https://github.com/danielmccluskey/Navmesh-Tutorial">here</a> or the actual tutorial below.</p>
+                        <div class="videoWrapper">
+                            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hgB793zKx4s?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+                    </div>
 
+                </div>
                 <div class="row" style="background-color:#ffffff">
                     <div class="ten columns offset-by-one" style="padding:20px">
                         <h3 class="value-heading">Pacman C++</h3>
