--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Homepage</title>
+    <title>Daniel McCluskey - Programmer</title>
     <meta name="description" content="Daniel's Portfolio">
     <meta name="author" content="Daniel">
     <!--Font-->
