--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/home.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136079774-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-136079774-1');
+    </script>
+
     <!--Github buttons-->
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
