--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h3>Projects</h3>
                     </div>
                     <div class="content row ">
-                        <h3>Unity Machine Learning Sidescroller</h3>
+                        <h3>Unity - Machine Learning Sidescroller</h3>
                         <p>This repo contains a small Unity project that uses the Unity Machine Learning Agents toolkit to train an agent to traverse through a sidescrolling game.</p>
                         <p><a href="https://github.com/danielmccluskey/Unity-NeuralNetworkSideScroller">Github</a> | <a href="https://www.youtube.com/watch?v=elU-J99Hi8Y">YouTube</a></p>
                         <!-- Place this tag where you want the button to render. -->
@@ -86,6 +86,20 @@
                         <!-- Place this tag where you want the button to render. -->
                         <a class="github-button" href="https://github.com/danielmccluskey/Unity-NeuralNetworkSideScroller/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download danielmccluskey/Unity-NeuralNetworkSideScroller on GitHub">Download</a>
                         <iframe width="100%" height="500" src="https://www.youtube.com/embed/elU-J99Hi8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="content row border-top">
+                        <h3>Unity - AI Spy vs Guard</h3>
+                        <p>This Unity project provides a scenario including reactive ‘Guard’ AI agents and a planning based ‘Spy’ AI agent. The role of the ‘Guard’ agents is to patrol a given area and react to the ‘Spy’ in an attempt to catch them. The role of the ‘Spy agent is to avoid the ‘Guard’ agents to successfully achieve its goals (Find a key and get to the exit).</p>
+                        <p>This project uses a Goal Oriented Action Planning method to drive the guards, this allows them to make their own decisions by pathfinding through their available actions to reach a goal.</p>
+                        <p>A document describing the features and actions implemented for this can be <a href="resources/AI.pdf">found here</a>, or the video below shows the Spy AI Agent making a successful runthrough of the level.</p>
+                        <p><a href="https://github.com/danielmccluskey/Unity-AI-SpyVsGuard">Github</a> | <a href="https://www.youtube.com/watch?v=0Y1EGevHg1s">YouTube</a> | <a href="resources/AI.pdf">Documentation</a></p>
+                        <!-- Place this tag where you want the button to render. -->
+                        <a class="github-button" href="https://github.com/danielmccluskey/Unity-AI-SpyVsGuard" data-icon="octicon-star" data-show-count="true" aria-label="Star danielmccluskey/Unity-AI-SpyVsGuard on GitHub">Star</a>
+                        <!-- Place this tag where you want the button to render. -->
+                        <a class="github-button" href="https://github.com/danielmccluskey/Unity-AI-SpyVsGuard/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork danielmccluskey/Unity-AI-SpyVsGuard on GitHub">Fork</a>
+                        <!-- Place this tag where you want the button to render. -->
+                        <a class="github-button" href="https://github.com/danielmccluskey/Unity-AI-SpyVsGuard/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download danielmccluskey/Unity-AI-SpyVsGuard on GitHub">Download</a>
+                        <iframe width="100%" height="500" src="https://www.youtube.com/embed/0Y1EGevHg1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="content row border-top">
                         <h3>Brains Eden 2018 - CrashBangBlastOff</h3>
@@ -100,14 +114,14 @@
                         <iframe width="100%" height="500" src="https://www.youtube.com/embed/84B1UD4ATxo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="content row border-top">
-                        <h3>Renesas MCU Car Rally</h3>
+                        <h3>Renesas - MCU Car Rally</h3>
                         <p>The Renesas MCU Car Rally is an event held in Germany in which different Universities go head to head in order to make a small hand-built car navigate through a track by itself. The Group I worked with consists of 5 members, Daniel McCluskey, Thomas Hopkins, Zack Raeburn, Connor Liggins and Morgan James. During the course of the project, every team member contributed towards the completion of the car, including both the building of the car and the coding of the car. This project helped us since the learning experience opened up many opportunities for the future and expanded our knowledge of Software and Hardware integration.</p>
                         <p><a href="https://renesasrulz.com/university/mcurally/">Website</a> | <a href="https://www.youtube.com/watch?v=AKKpPmxx07w">YouTube</a></p>
 
                         <iframe width="100%" height="500" src="https://www.youtube.com/embed/gCiQW1K2jfA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="content row border-top">
-                        <h3>Unity A Star Pathfinding Tutorial</h3>
+                        <h3>Unity - A* Pathfinding Tutorial</h3>
                         <p>A small tutorial to show you how to implement A* star pathfinding on a 2D grid in Unity3d.</p>
                         <p><a href="https://github.com/danielmccluskey/A-Star-Pathfinding-Tutorial">Github</a> | <a href="https://www.youtube.com/watch?v=AKKpPmxx07w">YouTube</a></p>
                         <!-- Place this tag where you want the button to render. -->
@@ -122,14 +136,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="10 columns offset-by-one">
-                <div class="one-half columns">
-                </div>
-                <div class="one-half columns">
-                </div>
-            </div>
-        </div>
+        <!--a scenario including reactive ‘Guard’ AI agents and a planning based ‘Spy’ AI agent. The role of the ‘Guard’ agents will be to patrol a given area and react to the ‘Spy’ in an attempt to catch them. The role of the ‘Spy agent will be to avoid the ‘Guard’ agents to successfully achieve a given goal (e.g. collect a key then get to the exit).-->
     </div>
 </body>
+</html>
