--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <h3>About</h3>
                     </div>
                     <div class="row">
-                        <p>Hi, I'm Daniel McCluskey, a Computer Games Programmer currently studying at the University of Gloucestershire currently looking for a work placement in the Games industry. Skilled in <b>Unity3D</b>, <b>C++</b>, <b>C#</b> and <b>FMODStudio</b>, with a keen interest in <b>Artificial Intelligence</b> and <b>Machine Learning</b>.</p>
+                        <p>Hi, I'm Daniel McCluskey, a Computer Games Programmer currently studying at the University of Gloucestershire. I am currently looking for a work placement in the Games industry. Skilled in <b>Unity</b>, <b>C++</b>, <b>C#</b> and <b>FMODStudio</b>, with a keen interest in <b>Artificial Intelligence</b> and <b>Machine Learning</b>.</p>
                     </div>
                     
                 </div>
