--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="header">
             <div class="row">
                 <h2 class="title">DANIEL MCCLUSKEY</h2>
-				<h4 class="title">AI Programmer</h4>
+				<h4 class="title">Gameplay Programmer</h4>
             </div>
         </section>
         <div class="row">
@@ -77,6 +77,13 @@
                     <div class="row">
                         <h3>Projects</h3>
                     </div>
+					<div class="content row border-top">
+                        <h3>Under the Bus (WIP)</h3>
+                        <p>Under the Bus is a unique party game, created in Unity, that connects several android devices to a central PC, allowing users to play mini-games that utilise the gyroscope, camera and touch-screen. Up to six devices (players) can connect to the server PC. The PC will show the main game, while the android devices act as controllers. There is a central hub in which players will be able to choose the next mini-game to play (faced with 6 choices randomly chosen from the mini-game list), which can include 1vWorld, 3v3 and PvP. Players can customise their characters here, based on attire won from playing the game.</p>
+						<p>My role within the team that made this game was a gameplay programmer, working on the minigames and general back end systems.</p>
+                        <p><a href="https://comx.glos.ac.uk/19/team/oakbound/">Website</a> | <a href="https://www.youtube.com/watch?v=cu-1_e6g1FE">YouTube</a> | <a href="https://www.youtube.com/watch?v=AKwtDl3vBWQ">Video Walkthrough of project</a></p>                        
+                        <iframe width="100%" height="500" src="https://www.youtube.com/embed/cu-1_e6g1FE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                     <div class="content row ">
                         <h3>Unity - Machine Learning Sidescroller</h3>
                         <p>This repo contains a small Unity project that uses the Unity Machine Learning Agents toolkit to train an agent to traverse through a sidescrolling game.</p>
@@ -103,13 +110,7 @@
                         <a class="github-button" href="https://github.com/danielmccluskey/Unity-AI-SpyVsGuard/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download danielmccluskey/Unity-AI-SpyVsGuard on GitHub">Download</a>
                         <iframe width="100%" height="500" src="https://www.youtube.com/embed/0Y1EGevHg1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-					<div class="content row border-top">
-                        <h3>Under the Bus (WIP)</h3>
-                        <p>Under the Bus is a unique party game, created in Unity, that connects several android devices to a central PC, allowing users to play mini-games that utilise the gyroscope, camera and touch-screen. Up to six devices (players) can connect to the server PC. The PC will show the main game, while the android devices act as controllers. There is a central hub in which players will be able to choose the next mini-game to play (faced with 6 choices randomly chosen from the mini-game list), which can include 1vWorld, 3v3 and PvP. Players can customise their characters here, based on attire won from playing the game.</p>
-						<p>My role within the team that made this game was a gameplay programmer, working on the minigames and general back end systems.</p>
-                        <p><a href="https://comx.glos.ac.uk/19/team/oakbound/">Website</a> | <a href="https://www.youtube.com/watch?v=-ff1VfbzRxk">YouTube</a></p>                        
-                        <iframe width="100%" height="500" src="https://www.youtube.com/embed/-ff1VfbzRxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+					
                     <div class="content row border-top">
                         <h3>Brains Eden 2018 - CrashBangBlastOff</h3>
                         <p>This repo contains a small 1v1 game made in 48 hours for the Brains Eden Games Jam of 2018.</p>
