--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="header">
             <div class="row">
                 <h2 class="title">DANIEL MCCLUSKEY</h2>
-				<h4 class="title">Gameplay Programmer</h4>
+				<h4 class="title">AI Programmer</h4>
             </div>
         </section>
         <div class="row">
