--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                         <h3>About</h3>
                     </div>
                     <div class="row">
-                        <p>Hi, I'm Daniel McCluskey, a Computer Games Programmer currently studying at the University of Gloucestershire. I am currently looking for a work placement in the Games industry. Skilled in <b>Unity</b>, <b>C++</b>, <b>C#</b> and <b>FMODStudio</b>, with a keen interest in <b>Artificial Intelligence</b> and <b>Machine Learning</b>.</p>
+                        <p>Hi, I'm Daniel McCluskey, a Programmer currently working at the University of Gloucestershire as a Research Assistant for the Bsc Applied Artificial Intelligence course. Prior to working at the University, I also studied there on the Bsc Computer Games Programming course in which I attained a First Class Honours award. My time at the University has given me a great understanding of programs and languages such as <b>Unity</b>, <b>C++</b>, <b>C#</b> and <b>FMODStudio</b>. My personal interests in my field are <b>Artificial Intelligence</b> and <b>Machine Learning</b>.</p>
                     </div>
-                    <div class="row">
+                    <!--<div class="row">
                         <a href="resources/DM.pdf">Resume/CV</a>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="content border-top">
                     <div class="row ">
