--- a/index.html
+++ b/index.html
@@ -51,9 +51,19 @@
                     <!--<div class="row">
                         <p>Hi, I'm Daniel McCluskey, a Programmer currently working at the University of Gloucestershire as a Research Assistant for the Bsc Applied Artificial Intelligence course. Prior to working at the University, I also studied there on the Bsc Computer Games Programming course in which I attained a First Class Honours award. My time at the University has given me a great understanding of programs and languages such as <b>Unity</b>, <b>C++</b>, <b>C#</b> and <b>FMODStudio</b>. My personal interests in my field are <b>Artificial Intelligence</b> and <b>Machine Learning</b>.</p>
                     </div>-->
-
-                    <div class="row">
+                    <!--<div class="row">
                         <p>Hi, I'm Daniel McCluskey, a Computer Games Programmer. I am currently looking for a work placement in the Games industry. Skilled in <b>Unity</b>, <b>C++</b>, <b>C#</b> and <b>FMODStudio</b>, with a keen interest in <b>Artificial Intelligence</b> and <b>Machine Learning</b>.</p>
+                    </div>-->
+                    <div class="row">
+                        <p>
+                            Hi, I'm Daniel McCluskey, a Graduate Computer Games Programmer, working as a Research Assistant for the Creative Computing Courses at the University of Gloucestershire, currently focusing on writing course material for Artificial Intelligence, Data Science and Games Programming related courses.
+                        </p>
+                        <p>
+                            Skilled with the Unity engine for mobile and PC development using C#, Unreal Engine development for games using C++, and experience with the programming API and Engine integrations of the FMOD audio framework. I also have a keen interest in Artificial Intelligence and Machine Learning for games and have gained experience in AI techniques including behaviour trees, state machines, goal-oriented action planners, pathfinding algorithms and basic Neural Network implementations for games during my time at University as both a student and a Research Assistant.
+                        </p>
+                        <p>
+                            Self-taught knowledge of website development using HTML and CSS, using frameworks such as Bootstrap and Skeleton. Experience with using Python for data science in tandem with libraries such as FastAI, Pandas, Matplotlib and Numpy. Knowledge of ECS through practical implementation in C++ and Amateur experience with OpenGL and GLSL shader programming in C++.
+                        </p>
                     </div>
                     <!--<div class="row">
                         <a href="resources/DM.pdf">Resume/CV</a>
