--- a/inprogress.html
+++ b/inprogress.html
@@ -63,7 +63,7 @@
                 <p><a id="aboutButton" style="background-color: #f3f3f3;" class="button" onclick="myFunction(1)">About</a></p>
             </div>
             <div class="four columns">
-                <p><a id="projectsButton" class="button" onclick="myFunction(2)">Projects</a></p></li>
+                <p><a id="projectsButton" class="button" onclick="myFunction(2)">Projects</a></p>
             </div>
             <div class="four columns">
                 <p><a id="contactButton" class="button" onclick="myFunction(3)">Contact</a></p>
@@ -74,16 +74,30 @@
             <div class="row">
                 <h5>About Me</h5>
             </div>
-            <div class="row">
-                <p>
-                    Hi, I'm Daniel McCluskey, a Graduate Computer Games Programmer, working as a Research Assistant for the Creative Computing Courses at the University of Gloucestershire, currently focusing on writing course material for Artificial Intelligence, Data Science and Games Programming related courses.
-                </p>
-                <p>
-                    Skilled with the Unity engine for mobile and PC development using C#, Unreal Engine development for games using C++, and experience with the programming API and Engine integrations of the FMOD audio framework. I also have a keen interest in Artificial Intelligence and Machine Learning for games and have gained experience in AI techniques including behaviour trees, state machines, goal-oriented action planners, pathfinding algorithms and basic Neural Network implementations for games during my time at University as both a student and a Research Assistant.
-                </p>
-                <p>
-                    Self-taught knowledge of website development using HTML and CSS, using frameworks such as Bootstrap and Skeleton. Experience with using Python for data science in tandem with libraries such as FastAI, Pandas, Matplotlib and Numpy. Knowledge of ECS through practical implementation in C++ and Amateur experience with OpenGL and GLSL shader programming in C++.
-                </p>
+            <div class="about row">
+                <div class="eight columns">
+                    <p>
+                        Hi, I'm Daniel McCluskey, a Graduate Computer Games Programmer, working as a Research Assistant for the Creative Computing Courses at the University of Gloucestershire, currently focusing on writing course material for Artificial Intelligence, Data Science and Games Programming related courses.
+                    </p>
+                </div>
+                <div class="four columns"><img src="images/banner.gif" class="Overlayimage" /></div>
+            </div>
+            <div class="about row">
+                <div class="four columns"><img src="images/banner.gif" class="Overlayimage" /></div>
+
+                <div class="eight columns">
+                    <p>
+                        Skilled with the Unity engine for mobile and PC development using C#, Unreal Engine development for games using C++, and experience with the programming API and Engine integrations of the FMOD audio framework. I also have a keen interest in Artificial Intelligence and Machine Learning for games and have gained experience in AI techniques including behaviour trees, state machines, goal-oriented action planners, pathfinding algorithms and basic Neural Network implementations for games during my time at University as both a student and a Research Assistant.
+                    </p>
+                </div>
+            </div>
+            <div class="about row">
+                <div class="eight columns">
+                    <p>
+                        Self-taught knowledge of website development using HTML and CSS, using frameworks such as Bootstrap and Skeleton. Experience with using Python for data science in tandem with libraries such as FastAI, Pandas, Matplotlib and Numpy. Knowledge of ECS through practical implementation in C++ and Amateur experience with OpenGL and GLSL shader programming in C++.
+                    </p>
+                </div>
+                <div class="four columns"><img src="images/banner.gif" class="Overlayimage" /></div>
             </div>
         </div>
         <div id="projectsDiv" style="display:none">
@@ -162,7 +176,6 @@
         <div class="row">
             <h5>Contact</h5>
         </div>
-    </div>
     </div>
 
     <script>
