--- a/inprogress.html
+++ b/inprogress.html
@@ -47,16 +47,18 @@
     <div class="bodycontainer container">
         <div class="row section-header">
         </div>
-        <div class="row Overlaycontainer">
-            <img src="images/banner.gif" class="Overlayimage" />
+        <a id="" class="" onclick="myFunction(4)">
+            <div class="row Overlaycontainer">
+                <img src="images/banner.gif" class="Overlayimage" />
 
-            <div class="Overlaytext">
-                <h3><strong>Unity Neural Network</strong></h3>
-                <p>
-                    Click here to go to the project page!
-                </p>
+                <div class="Overlaytext">
+                    <h3><strong>Unity Neural Network</strong></h3>
+                    <p>
+                        Click here to go to the project page!
+                    </p>
+                </div>
             </div>
-        </div>
+        </a>
         <div class="row section-tablist">
 
             <div class="four columns">
