Added scroll jump

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="bodycontainer container">
         <div class="row section-header">
         </div>
-        <a id="" class="" onclick="myFunction(4)">
+        <a id="" class="" href="#foo" onclick="myFunction(4)">
             <div class="row Overlaycontainer">
                 <img src="images/banner.gif" class="Overlayimage" />
 
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div id="projectsDiv" style="display:none">
-            <div class="row">
+            <div id="foo" class="row">
                 <h5>Projects</h5>
             </div>
             <div class="row section-tablist">
